load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "prow_prometheusrule",
    cluster = "{STABLE_PROW_CLUSTER}",
    kind = None,
    template = ":prow_prometheusrule_yaml",
    visibility = ["//visibility:public"],
)

genrule(
    name = "prow_prometheusrule_yaml",
    srcs = ["//prow/cluster/monitoring/mixins/prometheus:prow_prometheusrule",],
    tools = ["@gojsontoyaml//file",],
    outs = ["prow_prometheusrule.yaml"],
    cmd = "cat $(location //prow/cluster/monitoring/mixins/prometheus:prow_prometheusrule) | $(location @gojsontoyaml//file) > $@",
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
